--- a/resources.qrc
+++ b/resources.qrc
@@ -64,5 +64,6 @@
         <file>resources/ipad-mockups/ipad.png</file>
         <file>resources/DeveloperDiskImages.json</file>
         <file>resources/keychain.mp4</file>
+        <file>resources/wireless-gallery-import.mp4</file>
     </qresource>
 </RCC>
